css/style.production.css
/* ... */
.button__submit:hover,
.button__submit:active {
  -webkit-box-shadow: none;
          box-shadow: none;
}

@-webkit-keyframes send {
  0% {
    -webkit-transform: translate3d(-5px, 5px, 2px);
            transform: translate3d(-5px, 5px, 2px);
  }

  80% {
    -webkit-transform: translate3d(5px, -5px, -2px);
            transform: translate3d(5px, -5px, -2px);
  }

  100% {
    -webkit-transform: translate3d(-5px, 5px, 2px);
            transform: translate3d(-5px, 5px, 2px);
  }
}

@keyframes send {
  0% {
    -webkit-transform: translate3d(-5px, 5px, 2px);
            transform: translate3d(-5px, 5px, 2px);
  }

  80% {
    -webkit-transform: translate3d(5px, -5px, -2px);
            transform: translate3d(5px, -5px, -2px);
  }

  100% {
    -webkit-transform: translate3d(-5px, 5px, 2px);
            transform: translate3d(-5px, 5px, 2px);
  }
}

/*
------------------Contact form end----------
*/
@supports (display: grid) {
  .project-list {
    display: -ms-grid;
    display: grid;
    grid-gap: 30px;
    -ms-grid-columns: 3fr 10px 1fr;
    grid-template-columns: 3fr 1fr;
    /*grid-template-rows: 300px 300px;*/
    margin: 0;
    margin-bottom: 70px;
  }

  .project-details {
    margin-left: -15%;
    text-align: left;
  }

  .project-list__item {
    max-width: 70%;
    height: 80%;
    margin-bottom: 30px;
    margin-left: 3vw;
    margin-right: 3vw;
    -webkit-transition: all .5s ease-in-out;
    -o-transition: all .5s ease-in-out;
    transition: all .5s ease-in-out;
    -webkit-box-shadow: 5px 5px 10px #1D001B;
            box-shadow: 5px 5px 10px #1D001B;
    padding-bottom: 10%;
  }

  .pokedex {
    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.9))), url(../img/pokedex.png);
    background-image: -o-linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.9)), url(../img/pokedex.png);
    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.9)), url(../img/pokedex.png);
    background-position: center;
    background-size: cover;
  }

  .to-do {
    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.9))), url(../img/todo.png);
    background-image: -o-linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.9)), url(../img/todo.png);
    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.9)), url(../img/todo.png);
    background-position: center;
    background-size: cover;
  }

  .pokedex-heading {
    margin-top: 10%;
    font-size: 38px;
  }

  .project-list__item:hover {
    margin-left: 5vw;
    margin-right: 5vw;
    max-width: 80%;
    height: 80%;
    
  }

  .project-title {
    margin-top: 20%;
    font-size: 42px;
    color: rgb(66, 178, 200);
  }

  .project-button {
    font-size: 22px;
    background: transparent;
    margin-bottom: 10%;
    width: 40%;
  }

  .project-description {
    font-size: 20px;
    width: 125%;
  }

  .project-description:first-child {
    margin-top: 50%;
    margin-bottom: 10%;
  }

  .project-img img {
    height: 50px;
    margin: 15px;
    margin-bottom: 35px;
    opacity: .8;
  }
}

.section-two {
  z-index: -10;
  width: 100vw;
  position: relative;
  left: calc(-50vw + 50%);
  height: 100vh;
  padding: 0;
  margin: 0;
  background-image: -webkit-gradient(linear, right top, left bottom, from(#AA9FAA), to(#E3DFE3));
  background-image: -o-linear-gradient(top right, #AA9FAA, #E3DFE3);
  background-image: linear-gradient(to bottom left, #AA9FAA, #E3DFE3);
}

.copyright {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  font-size: 14px;
  margin: 0;
}

/*
--------------------Media Queries-------------------
*/
@media all and (min-width: 500px) and (max-width: 750px) {
  .project-list {
    -ms-grid-columns: 1fr;
    grid-template-columns: 1fr;
  }

  .project-list__item{
    padding-bottom: 100px;
  }

  .project-description {
    width: 100%;
    margin: auto;
  }

  .project-title{
    margin-top: 150px;
  }

  .project-details{
    text-align: center;
    margin: auto;
  }
}

@media all and (min-width: 750px) and (max-width: 1200px) {

  .project-list__item{
    padding-bottom: 60px;
  }

  .project-list__item h3{
    font-size: 28px;
  }

  .project-img img{
    height: 35px;
  }

  .project-button{
    width: 150px;
  }
}

@media all and (min-width: 750px) {
  body {
    position: relative;
    z-index: 1;
  }

  #menu-toggle {
    display: none;
  }

  .profile__picture-animated {
    margin-top: 5px;
  }

  .social-media-phone {
    display: none;
  }

  .project-list {
    grid-gap: 15px;
    padding: 0 35px;
  }

  .contact-form-wrapper {
    height: 700px;
  }
}
/* ... */

